--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details?</a></div>
     <div class="todo-list">
-      <p id="todo-list__addition"><label for="todo-list__new-task">Add Item</label>
+      <p id="todo-list__add"><label for="todo-list__new-task">Add Item</label>
         <div class="todo-list__new-task-wrapper"><input id="todo-list__new-task"class="todo-list__task" 
             type="text"><button>Add</button></div>
       </p>
