--- a/index.html
+++ b/index.html
@@ -5,30 +5,29 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
-    <div class="page-header"><img src="./eisenhower-matrix.jpg"><a class="page-header__link"
+  <body class="page">
+    <div class="page-header"><img class="page-header__img" src="./eisenhower-matrix.jpg"><a class="page-header__link"
         href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details?</a></div>
     <div class="todo-list">
-      <p id="todo-list__add"><label for="todo-list__new-task">Add Item</label>
-        <div class="todo-list__new-task-wrapper"><input id="todo-list__new-task"class="todo-list__task" 
-            type="text"><button>Add</button></div>
+      <p id="todo-list__add"><label for="todo-list__new-task" class="todo-list__label">Add Item</label>
+        <div class="todo-list__new-task-wrapper"><input id="todo-list__new-task" class="todo-list__task todo-list__input todo-list__input_text" type="text"><button class="todo-list__button">Add</button></div>
       </p>
-      <h3>Todo</h3>
+      <h3 class="todo-list__title">Todo</h3>
       <ul id="todo-list__incompleted-tasks">
-        <li><input type="checkbox"><label class="todo-list__task">Pay Bills</label>
-            <input type="text" class="todo-list__task"><button class="edit">Edit</button><button 
-            class="delete"><img src="./remove.svg"></button></li>
-        <li class="todo-list__edit-mode"><input type="checkbox"><label class="todo-list__task">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="todo-list__task">
-            <button class="edit">Save</button><button class="delete">
-            <img src="./remove.svg"></button></li>
+        <li class = "todo-list__item"><input class = "todo-list__input todo-list__input_checkbox" type="checkbox"><label class="todo-list__task todo-list__label">Pay Bills</label>
+            <input class = "todo-list__input todo-list__input_text" type="text" class="todo-list__task"><button class="todo-list__button edit">Edit</button><button 
+            class="todo-list__button delete"><img class="todo-list__delete-img" src="./remove.svg"></button></li>
+        <li class="todo-list__item todo-list__edit-mode"><input type="checkbox" class="todo-list__input todo-list__input_checkbox"><label class="todo-list__task todo-list__label">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="todo-list__task todo-list__input todo-list__input_text">
+            <button class="todo-list__button edit">Save</button><button class="todo-list__button delete">
+            <img class="todo-list__delete-img" src="./remove.svg"></button></li>
       </ul>
-      <h3>Completed</h3>
+      <h3 class="todo-list__title">Completed</h3>
       <ul id="todo-list__completed-tasks">
-        <li><input type="checkbox" checked><label class="todo-list__task">See the Doctor</label><input 
-            type="text" class="todo-list__task"><button class="edit">Edit</button><button 
-            class="delete"><img src="./remove.svg"></button></li>
+        <li class = "todo-list__item"><input class="todo-list__input todo-list__input_checkbox" type="checkbox" checked><label class="todo-list__task todo-list__label">See the Doctor</label><input 
+            type="text" class="todo-list__task todo-list__input todo-list__input_text"><button class="todo-list__button edit">Edit</button><button 
+            class="todo-list__button delete"><img class="todo-list__delete-img" src="./remove.svg"></button></li>
       </ul>
     </div>
     <script src="app.js"></script>
