--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="page">
-    <div class="page-header"><img class="page-header__img" src="./eisenhower-matrix.jpg"><a class="page-header__link"
+    <header class="page-header"><img class="page-header__img" src="./eisenhower-matrix.jpg"><a class="page-header__link"
         href="https://goal-life.com/page/method/matrix-eisenhower">
-        Want more details?</a></div>
-    <div class="todo-list">
-      <p id="todo-list__add"><label for="todo-list__new-task" class="todo-list__label">Add Item</label>
+        Want more details?</a></header>
+    <main class="todo-list">
+      <section id="todo-list__add"><label for="todo-list__new-task" class="todo-list__label">Add Item</label>
         <div class="todo-list__new-task-wrapper"><input id="todo-list__new-task" class="todo-list__task todo-list__input todo-list__input_text" type="text"><button class="todo-list__button">Add</button></div>
-      </p>
-      <h3 class="todo-list__title">Todo</h3>
-      <ul id="todo-list__incompleted-tasks">
+      </section>
+      <section class="todo-list__todo">
+        <h3 class="todo-list__title">Todo</h3>
+        <ul id="todo-list__incompleted-tasks">
         <li class = "todo-list__item"><input class = "todo-list__input todo-list__input_checkbox" type="checkbox"><label class="todo-list__task todo-list__label">Pay Bills</label>
             <input class = "todo-list__input todo-list__input_text" type="text" class="todo-list__task"><button class="todo-list__button edit">Edit</button><button 
             class="todo-list__button delete"><img class="todo-list__delete-img" src="./remove.svg"></button></li>
@@ -22,14 +23,17 @@
             <input type="text" value="Go Shopping" class="todo-list__task todo-list__input todo-list__input_text">
             <button class="todo-list__button edit">Save</button><button class="todo-list__button delete">
             <img class="todo-list__delete-img" src="./remove.svg"></button></li>
-      </ul>
-      <h3 class="todo-list__title">Completed</h3>
-      <ul id="todo-list__completed-tasks">
-        <li class = "todo-list__item"><input class="todo-list__input todo-list__input_checkbox" type="checkbox" checked><label class="todo-list__task todo-list__label">See the Doctor</label><input 
-            type="text" class="todo-list__task todo-list__input todo-list__input_text"><button class="todo-list__button edit">Edit</button><button 
-            class="todo-list__button delete"><img class="todo-list__delete-img" src="./remove.svg"></button></li>
-      </ul>
-    </div>
+        </ul>
+      </section>
+      <section class="todo-list__complete">
+        <h3 class="todo-list__title">Completed</h3>
+        <ul id="todo-list__completed-tasks">
+          <li class = "todo-list__item"><input class="todo-list__input todo-list__input_checkbox" type="checkbox" checked><label class="todo-list__task todo-list__label">See the Doctor</label><input 
+              type="text" class="todo-list__task todo-list__input todo-list__input_text"><button class="todo-list__button edit">Edit</button><button 
+              class="todo-list__button delete"><img class="todo-list__delete-img" src="./remove.svg"></button></li>
+        </ul>
+      </section>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
