fix: add alternate media content according to rule 1.2 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="page">
-    <header class="page-header"><img class="page-header__img" src="./eisenhower-matrix.jpg"><a class="page-header__link"
+    <header class="page-header"><img class="page-header__img" src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix"><a class="page-header__link"
         href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details?</a></header>
     <main class="todo-list">
@@ -18,11 +18,11 @@
         <ul id="todo-list__incompleted-tasks">
         <li class = "todo-list__item"><input class = "todo-list__input todo-list__input_checkbox" type="checkbox"><label class="todo-list__task todo-list__label">Pay Bills</label>
             <input class = "todo-list__input todo-list__input_text" type="text" class="todo-list__task"><button class="todo-list__button edit">Edit</button><button 
-            class="todo-list__button delete"><img class="todo-list__delete-img" src="./remove.svg"></button></li>
+            class="todo-list__button delete"><img class="todo-list__delete-img" src="./remove.svg" alt="Left arrow like on the delete button"></button></li>
         <li class="todo-list__item todo-list__edit-mode"><input type="checkbox" class="todo-list__input todo-list__input_checkbox"><label class="todo-list__task todo-list__label">Go Shopping</label>
             <input type="text" value="Go Shopping" class="todo-list__task todo-list__input todo-list__input_text">
             <button class="todo-list__button edit">Save</button><button class="todo-list__button delete">
-            <img class="todo-list__delete-img" src="./remove.svg"></button></li>
+            <img class="todo-list__delete-img" src="./remove.svg" alt="Left arrow like on the delete button"></button></li>
         </ul>
       </section>
       <section class="todo-list__complete">
@@ -30,7 +30,7 @@
         <ul id="todo-list__completed-tasks">
           <li class = "todo-list__item"><input class="todo-list__input todo-list__input_checkbox" type="checkbox" checked><label class="todo-list__task todo-list__label">See the Doctor</label><input 
               type="text" class="todo-list__task todo-list__input todo-list__input_text"><button class="todo-list__button edit">Edit</button><button 
-              class="todo-list__button delete"><img class="todo-list__delete-img" src="./remove.svg"></button></li>
+              class="todo-list__button delete"><img class="todo-list__delete-img" src="./remove.svg" alt="Left arrow like on the delete button"></button></li>
         </ul>
       </section>
     </main>
