fix: change class names using BEM according to rule 2.1 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
         href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details?</a></header>
     <main class="todo-list">
-      <section id="todo-list__add"><label for="todo-list__new-task" class="todo-list__label">Add Item</label>
+      <section id="todo-list__to-add"><label for="todo-list__new-task" class="todo-list__label">Add Item</label>
         <div class="todo-list__new-task-wrapper"><input id="todo-list__new-task" class="todo-list__task todo-list__input todo-list__input_text" type="text"><button class="todo-list__button">Add</button></div>
       </section>
-      <section class="todo-list__todo">
+      <section class="todo-list__to-do">
         <h3 class="todo-list__title">Todo</h3>
         <ul id="todo-list__incompleted-tasks">
         <li class = "todo-list__item"><input class = "todo-list__input todo-list__input_checkbox" type="checkbox"><label class="todo-list__task todo-list__label">Pay Bills</label>
-            <input class = "todo-list__input todo-list__input_text" type="text" class="todo-list__task"><button class="todo-list__button edit">Edit</button><button 
-            class="todo-list__button delete"><img class="todo-list__delete-img" src="./remove.svg" alt="Left arrow like on the delete button"></button></li>
+            <input class = "todo-list__input todo-list__input_text" type="text" class="todo-list__task"><button class="todo-list__button todo-list__button_edit">Edit</button><button 
+            class="todo-list__button todo-list__button_delete"><img class="todo-list__delete-img" src="./remove.svg" alt="Left arrow like on the delete button"></button></li>
         <li class="todo-list__item todo-list__edit-mode"><input type="checkbox" class="todo-list__input todo-list__input_checkbox"><label class="todo-list__task todo-list__label">Go Shopping</label>
             <input type="text" value="Go Shopping" class="todo-list__task todo-list__input todo-list__input_text">
-            <button class="todo-list__button edit">Save</button><button class="todo-list__button delete">
+            <button class="todo-list__button todo-list__button_edit">Save</button><button class="todo-list__button todo-list__button_delete">
             <img class="todo-list__delete-img" src="./remove.svg" alt="Left arrow like on the delete button"></button></li>
         </ul>
       </section>
-      <section class="todo-list__complete">
+      <section class="todo-list__to-complete">
         <h3 class="todo-list__title">Completed</h3>
         <ul id="todo-list__completed-tasks">
           <li class = "todo-list__item"><input class="todo-list__input todo-list__input_checkbox" type="checkbox" checked><label class="todo-list__task todo-list__label">See the Doctor</label><input 
-              type="text" class="todo-list__task todo-list__input todo-list__input_text"><button class="todo-list__button edit">Edit</button><button 
-              class="todo-list__button delete"><img class="todo-list__delete-img" src="./remove.svg" alt="Left arrow like on the delete button"></button></li>
+              type="text" class="todo-list__task todo-list__input todo-list__input_text"><button class="todo-list__button todo-list__button_edit">Edit</button><button 
+              class="todo-list__button todo-list__button_delete"><img class="todo-list__delete-img" src="./remove.svg" alt="Left arrow like on the delete button"></button></li>
         </ul>
       </section>
     </main>
